[gd_scene load_steps=7 format=3 uid="uid://bx0yw2rkqh8hh"]

[ext_resource type="Script" path="res://actors/EnemyPatrol.gd" id="1_patrol"]
[ext_resource type="Script" path="res://systems/DimensionNode.gd" id="2_dimension"]
[ext_resource type="Script" path="res://systems/DebugBorder.gd" id="4_debug"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enemy"]
size = Vector2(24, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_detector"]
size = Vector2(32, 36)

[sub_resource type="Animation" id="Animation_walk"]
resource_name = "walk"
length = 1.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(24, 32), Vector2(26, 30), Vector2(24, 32)]
}

[node name="EnemyPatrol" type="CharacterBody2D"]
script = ExtResource("1_patrol")

[node name="DimensionNode" type="Node" parent="."]
script = ExtResource("2_dimension")
active_layers = Array[int]([0])

[node name="DebugBorder" type="Node2D" parent="."]
script = ExtResource("4_debug")
border_color = Color(1, 0, 0, 1)

[node name="EnemySprite" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D"]
shape = SubResource("RectangleShape2D_enemy")

[node name="WallDetector" type="RayCast2D"]
target_position = Vector2(32, 0)
collision_mask = 1

[node name="LedgeDetector" type="RayCast2D"]
target_position = Vector2(32, 32)
collision_mask = 1

[node name="PlayerDetector" type="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("RectangleShape2D_detector")

[node name="AnimationPlayer" type="AnimationPlayer"]
autoplay = "walk"